# MKVToolnix-Windows-7

./: .gitignore  .gitmodules  AUTHORS  Building.for.Windows.md  CODE_OF_CONDUCT.md  ChangeLog  INSTALL  NEWS.md  README  README.Windows.md  README.Windows.txt  README.md  Rakefile  autogen.sh  build-config.in  configure.ac  configure.in  mkvtoolnix.spec
.tx/: config
ac/: ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_docbook.m4  benchmark.m4  boost.m4  c++-features.m4  c++11.m4  clang.m4  cmark.m4  compiler_flags.m4  compiler_version.m4  curl.m4  debugging_profiling.m4  drmingw.m4  dvdread.m4  ebml.m4  endianess.m4  extra_inc_lib.m4  flac.m4  fmt.m4  gtest.m4  iconv.m4  initialization.m4  inttypes.m4  macos.m4  magic.m4  matroska.m4  mingw.m4  nl_langinfo.m4  nlohmann_jsoncpp.m4  other_features.m4  pcre2.m4  po4a.m4  precompiled_headers.m4  pugixml.m4  qt5.m4  qt6.m4  qt_common.m4  static.m4  (+5 more)
contrib/: centos.spec  fedora-core.spec  opensuse-12.spec
debian-upstream/: changelog  control  copyright  mkvtoolnix-gui.install  mkvtoolnix-gui.manpages  mkvtoolnix.install  rules  watch
doc/: command_line_references.html  development.html  development.md  mkvmerge-identification-output-schema.json  pandoc.css
examples/: example-chapters-1.xml  example-timestamps-v1.json  example-timestamps-v2.json  matroskachapters.dtd  matroskasegmentinfo.dtd  matroskatags.dtd
installer/: external_links.ini  mkvtoolnix.nsi
po/: be.po  bg.po  ca.po  cs.po  de.po  es.po  eu.po  fr.po  hu.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sr_RS.po  sr_RS@latin.po  sv.po  tr.po  uk.po  zh_CN.po  zh_SG.po  zh_TW.po
rake.d/: add_po.rb  application.rb  compilation_database.rb  config.rb  digest.rb  extensions.rb  format_string_verifier.rb  gtest.rb  pch.rb  (+13 more)
(+2272 files in other folders)
